# QSimulation

./: CMakeLists.txt  QSimulation.pro  core.h  dialoganneal.cpp  dialoganneal.h  dialoganneal.ui  dialognew.cpp  dialognew.h  dialognew.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintarea.cpp  paintarea.h  pipebutton.cpp  pipebutton.h  readme.md  utili.cpp  utili.h
